packages/zenith-mcp/tests/fixtures/polaris-workspace/typescript/parse-error/clean.ts
export function pristineFn(): number {
    return 42;
}
